multi/k8s/overlays/dev/11_patch_replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: single
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: single
