multi/k8s/overlays/dev/10_istio_route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: single-vs
spec:
  hosts:
  - "*"
  gateways:
  - default/single-gateway
  http:
  - match:
    - uri:
        prefix: "/dev-single/"
    rewrite:
        uri: "/"
    route:
    - destination:
        host: dev-single-svc.dev.svc.cluster.local
        port:
          number: 8080
